--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "algoliasearch": "^4.8.5",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "firebase": "^8.2.5",
@@ -14,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
     "react-icons": "^4.1.0",
+    "react-instantsearch-dom": "^6.9.0",
     "react-scripts": "4.0.1",
     "react-use": "^17.1.0",
     "reactjs-popup": "^2.0.4",
